--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database = movies-api-db
-spring.data.mongodb.url = mongodb+srv://pinsoecodec:vuPbwpyEFMY3Rc1e@cluster1.io9kyri.mongodb.net
+spring.data.mongodb.database = ${MONGO_DATABASE}
+spring.data.mongodb.uri = mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}/{MONGO_DATABASE}
